Feat. New options. Application Host and custom HTTP Server Executor